--- a/AutoDuty/AutoDuty.csproj
+++ b/AutoDuty/AutoDuty.csproj
@@ -4,7 +4,7 @@
     <Authors></Authors>
     <Company></Company>
     <Version>1.0.0</Version>
-    <Description>AutoDuty</Description>
+    <Description>AutoDutyOptimized</Description>
     <Copyright></Copyright>
     <PackageProjectUrl></PackageProjectUrl>
   </PropertyGroup>
