--- a/AutoDuty/AutoDuty.csproj
+++ b/AutoDuty/AutoDuty.csproj
@@ -21,12 +21,12 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <DalamudLibPath>/home/rinoa/.xlcore/dalamud/Hooks/dev/</DalamudLibPath>
+    <DalamudLibPath>$(DALAMUD_HOME)/</DalamudLibPath>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   
    <PropertyGroup Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))'">
-    <DalamudLibPath>/home/rinoa/.xlcore/dalamud/Hooks/dev/</DalamudLibPath>
+    <DalamudLibPath>$(DALAMUD_HOME)/</DalamudLibPath>
   </PropertyGroup>
 
   <ItemGroup>
